--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon src/server.ts",
+    "server": "ts-node src/server.ts",
     "client": "ts-node src/client.ts"
   },
   "author": "",
@@ -13,5 +13,12 @@
   "devDependencies": {
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "@trpc/client": "^10.7.0",
+    "@trpc/server": "^10.7.0",
+    "@types/express": "^4.17.15",
+    "express": "^4.18.2",
+    "zod": "^3.20.2"
   }
 }
